typo in translation.json

--- a/data/public/search/locales/it/translation.json
+++ b/data/public/search/locales/it/translation.json
@@ -1,7 +1,7 @@
 {
   "search": {
     "placeholder": "Cerca",
-    "submit": "invia"
+    "submit": "invia",
     "no_hits": "nessun risultato"
   },
   "archives": {
