--- a/data/public/search/locales/en/translation.json
+++ b/data/public/search/locales/en/translation.json
@@ -2,7 +2,19 @@
   "search": {
     "placeholder": "Search",
     "submit": "submit",
-    "no_hits": "zero hits"
+    "no_hits": "no hits found",
+    "next": "Next",
+    "previous": "Previous",
+    "table": {
+      "number": "No.",
+      "title": "Title",
+      "from": "From",
+      "to": "To",
+      "notes": "Notes",
+      "level": "Level",
+      "id": "ID",
+      "category": "Category"
+    }
   },
   "archives": {
     "bs": "Basel-Stadt",
