start site french

--- a/data/public/locales/de/translation.json
+++ b/data/public/locales/de/translation.json
@@ -1,6 +1,6 @@
 {
   "headline": "ALOD",
-  "subheading": "Archive Linked Open Data",
+  "subheading": "Archival Linked Open Data",
   "search": {
     "link": "Hier",
     "text": " geht es zur Suche"
