--- a/data/public/locales/en/translation.json
+++ b/data/public/locales/en/translation.json
@@ -1,6 +1,6 @@
 {
   "headline": "ALOD",
-  "subheading": "Archive Linked Open Data",
+  "subheading": "Archival Linked Open Data",
   "search": {
     "link": "Here",
     "text": " you can search the archive."
